# cc-fraud-detect

./: .gitignore  consumer.py  dlq_inspector.py  docker-compose.yaml  kafka-connect.py  processor.py  producer.py  pyproject.toml  spark_engine.md  transaction_schema.avsc
kafka-connect-jdbc/: manifest.json
