[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[avro]>=2.14.0",
    "faker>=40.15.0",
    "fastavro>=1.12.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
]
